// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uint8 schema test invalid values: -1 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be >= 0[39m
[31m    Path:     dataTypes/byte.schema.json#/minimum[39m
[31m[39m"
`;

exports[`uint8 schema test invalid values: 1.5 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be integer[39m
[31m    Path:     dataTypes/byte.schema.json#/type[39m
[31m[39m"
`;

exports[`uint8 schema test invalid values: 256 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must be <= 255[39m
[31m    Path:     dataTypes/byte.schema.json#/maximum[39m
[31m[39m"
`;
